# aio-political-audit

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  config.py  main.py  pyproject.toml
analysis/: aio_analysis.ipynb  labelling_sources.py
queries/: queries.csv  queries_human_reviewed.csv  subtopics copy.csv  subtopics.csv  subtopics_human_reviewed.csv
scripts/: generate_queries.py  generate_subtopics.py  schema.py  serpapi_collector.py
