[project]
name = "aio-political-audit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipykernel>=6.31.0",
    "ruff>=0.15.13",
]
