[project]
name = "aio-political-audit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dateparser>=1.2.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pytrends>=4.9.2",
    "requests>=2.32.5",
    "requests-cache>=1.3.2",
    "seaborn>=0.13.2",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipykernel>=6.31.0",
    "ruff>=0.15.13",
]

[tool.uv.sources]
pytrends = { git = "https://github.com/GeneralMills/pytrends.git" }
