[project]
name = "aio-political-audit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dateparser>=1.2.2",
    "fastparquet>=2026.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "networkx>=3.6.1",
    "numpy>=2.0.2",
    "openai>=2.42.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "requests-cache>=1.3.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "urllib3>=2.6.3",
]
[tool.uv]
no-build-package = ["pyarrow"]
[dependency-groups]
dev = [
    "black>=25.11.0",
    "detect-secrets>=1.5.0",
    "ipykernel>=6.31.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
]
